@@ -130,6 +130,10 @@ public:
                   const wxRect& rect,
                   wxAuiPaneInfo& pane);
 
+    void DrawIcon(wxDC& dc,
+                  const wxRect& rect,
+                  wxAuiPaneInfo& pane);
+
 protected:
 
     void DrawCaptionBackground(wxDC& dc, const wxRect& rect, bool active);
